# OpenCycler

./: LICENSE  PrintData.py  README.md  install.sh  opencycler.py  output.3mf  pyproject.toml  run.sh  test.3mf
ecosystems/: Ecosystem.py  bambu_a1.py
gcode/chitu/: bed-level.gcode  change-plate.gcode  pause.gcode
plate_cyclers/: PlateCycler.py  chitu.py
src/: OC_build.py  OC_print_data.py  opencycler.py  opencycler_gui.py
src/ecosystems/: Ecosystem.py  bambu_a1.py
src/ecosystems/bambu_a1/: __init__.py  bambu_a1.py  metadata.py
src/plate_cyclers/: PlateCycler.py  chitu.py
src/template_output/: __init__.py
src/template_output/bambu_a1/: __init__.py
src/template_output/bambu_a1/template/3D/: 3dmodel.model
src/template_output/bambu_a1/template/Metadata/: plate_1.gcode  plate_1.gcode.md5  plate_1.json  project_settings.config  slice_info.config
src/utils/: OC_config_dialog.py  OC_cycler_manager.py  OC_files.py  OC_image.py  OC_logger.py  OC_state.py  __init__.py  oc_3mf.py
t/3D/: 3dmodel.model
t/Metadata/: filament_settings_1.config  model_settings.config  plate_1.gcode  plate_1.gcode.md5  plate_1.json  plate_2.json  project_settings.config  slice_info.config
