[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opencycler"
version = "0.1.0"
description = "Combine multiple print files for plate cycling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Pillow",
]

[project.scripts]
opencycler = "opencycler:main"
opencycler-gui = "opencycler_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["opencycler", "opencycler_gui", "OC_build", "OC_print_data"]
packages = [
  "ecosystems",
  "ecosystems.bambu_a1",
  "plate_cyclers",
  "utils",
  "gcode",
  "template_output",
  "template_output.bambu_a1",
]
include-package-data = true

[tool.setuptools.package-data]
gcode = ["**/*.gcode"]
template_output = ["**/*", "**/_rels/.rels", "**/_rels/*"]
